--- a/aula2htmls/tabela.html
+++ b/aula2htmls/tabela.html
@@ -4,60 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JOGO DO BIXO</title>
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6wkSmmDRH-IFhPwvXkwST-7UGi6JocB6Tk1mUgXPeLJHA_ptn1W9hk8-1B7xx41L_9hY&usqp=CAU">
 </head>
 <body>
    <h1>tabela de consumo de aghua</h1>
     <table border="1">
-        <tr>
-            <td>Tabela</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-        </tr>
-        <tr>
-            <td colspan="3">Tabela 2 a vingança</td>
-        </tr>
-        <tr>
-            <td rowspan="2">Tabela 3 </td>
-            <td colspan="2">tabelinha </td>
-        </tr>
-        <tr>
-            <td>Tabela 4 Ultimato</td>
-            <td>tabelinha e seus amigos</td>
-        </tr>
-        <tr>
-            <td>individuo</td>
-            <td>idade</td>
-            <td>Consumo DE AGHUA</td>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>10 anos</td>
-            <td>8x ao dia</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>8 anos</td>
-            <td>6x ao dia</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>12 anos</td>
-            <td>10x ao dia</td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>9 anos</td>
-            <td>7x ao dia</td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>11 anos</td>
-            <td>9x ao dia</td>
-        </tr>
+       <thead>
+            <tr>
+                <th>individuo</th>
+                <th>idade</th>
+                <th>Consumo DE AGHUA</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <th>1</th>
+                <td>10 anos</td>
+                <td>8x ao dia</td>
+            </tr>
+            <tr>
+                 <th>2</th>
+                <td>8 anos</td>
+                 <td>6x ao dia</td>
+            </tr>
+            <tr>
+                <th>3</th>
+                <td>12 anos</td>
+                <td>10x ao dia</td>
+            </tr>
+            <tr>
+                <th>4</th>
+                <td>9 anos</td>
+                <td>7x ao dia</td>
+            </tr>
+            <tr>
+                <th>5</th>
+                <td>11 anos</td>
+                <td>9x ao dia</td>
+            </tr>
+        </tbody>
+
+        <tfoot>
+            <tr>
+                <th colspan="3"> AUTOR: AUTOR</th>
+            </tr>
+        </tfoot>
     </table>
     
     <br>
-
+    <h2> Outra tabela </h2>
     <table border="1">
         <tr>
             <td>Tabela</td>
@@ -75,36 +71,7 @@
             <td>Tabela 4 Ultimato</td>
             <td>tabelinha e seus amigos</td>
         </tr>
-        <tr>
-            <td>individuo</td>
-            <td>idade</td>
-            <td>Consumo DE AGHUA</td>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>10 anos</td>
-            <td>8x ao dia</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>8 anos</td>
-            <td>6x ao dia</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>12 anos</td>
-            <td>10x ao dia</td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>9 anos</td>
-            <td>7x ao dia</td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>11 anos</td>
-            <td>9x ao dia</td>
-        </tr>
     </table>
 </body>
+
 </html>
