BOLO DE MORANGO

--- a/Exercício html 1 – Miguel knupp/index.html
+++ b/Exercício html 1 – Miguel knupp/index.html
@@ -7,31 +7,31 @@
 </head>
 <body>
     <header>
-        <h1>CURRICULO: Rodrigo Almeida</h1>
+        <h1>CURRICULO: jonh cena</h1>
         <hr>
     </header>
 
     <h2>DADOS PESSOAIS</h2>
     <br>
-    <p><b>Rua:</b> Dos bobos, 08 </p>
+    <p><b>Rua:</b> itaciba </p>
     <p><b>Cidade:</b> Arkhan City/Gotham</p>
-    <p><b>Telefone:</b> (20)99999-9999</p>
+    <p><b>Telefone:</b> (55)2154789</p>
     <br>
     <hr>
     <h2>FORMAÇÃO ACADÊMICA</h2>
     <br>
-    <P><B>Escola:</B> Escola Técnica Seu Zé Alencar</P>
-    <p><b>Duração:</b> 24 meses</p>
+    <P><B>Escola:</B> Escola Técnica INDO ALI</P>
+    <p><b>Duração:</b> 100 meses</p>
     <br>
     <hr>
     <h2>EXPERIÊNCIA PROFISSIONAL</h2>
     <ul>
         <li>Microsoft Office</li>
-        <li>Front End Developer</li>
-        <li>Designer Nail</li>
+        <li> ministerio da fazenda </li>
+        <li>mecanico</li>
     </ul>
     <br>
     <hr>
-    <p><i><b>Itaipava, 05 de agosto de 2024</b></i></p>
+    <p><i><b>ZIMBABWE, 04 de agosto de 2025</b></i></p>
 </body>
 </html>
