--- a/aula3html/atividade3/index.html
+++ b/aula3html/atividade3/index.html
@@ -3,17 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AIAIAI</title>
+    <title>Atividade 2</title>
+
+    <link rel="stylesheet" href="Design.css">
+    <style>
+        body{
+            background-color: gray;
+        }
+    </style>
 </head>
 <body>
-    <div 100%; style="background-color:rgb(255, 0, 0);width: 100vw; height: 25vh;" >
-        feicho
-    </div>
-    <div>
+    <header id="cabecinha">
+        <h1>Meu Documento sobre Div HTML</h1>
+    </header>
 
-    </div>
-    <div>
+    <div class="vermelho" >
+        
 
+            <div class="caixinha">
+                <h2>Meu conteúdo 01</h2>
+                <br>
+                <p>Meu paragrafo contendo texto</p>
+                <br>
+                <p>Meu paragrafo contendo texto</p>
+
+            </div>
+            <div class="caixinha">
+                <h2>Meu conteúdo 02</h2>
+                <br>
+                <p>Meu paragrafo contendo texto</p>
+                <br>
+                <p>Meu paragrafo contendo texto</p>
+
+            </div>
     </div>
+
+    <footer id="pezin">
+        <p><b>Todos os direitos reservados</b></p>
+    </footer>
 </body>
 </html>
