--- a/aula 4css/atividade4/index.html
+++ b/aula 4css/atividade4/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <h1>Formulário</h1>
-
+<form action="">
     <fieldset id="form1">
         
         <legend>Dados pessoais</legend>
@@ -103,5 +103,7 @@
         <input type="button" value="Enviar">
         <input type="reset"  value="Resetar">
     </div>
+</form>
+
 </body>
 </html>
