--- a/aula5/atividades/1/index.html
+++ b/aula5/atividades/1/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LALALA</title>
+   
+   <link rel="stylesheet" href="style.css">
+   
+   <style>
+        body{
+            background-color: antiquewhite;
+        }
+        #um{
+        background-color: green;
+        color: yellow;
+        font-weight: 900;
+        font-style: italic;
+        font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    
+  <p id="um">Din dinq doo bam bam bara be ba baram bom bom ba ba ba bam booo <br>
+    Wha... Wha... Wha… Wha… What's going on… On?</p>
+
+  <p id="dois" style="background-color: green; color: yellow; font-weight: 900; font-style: italic; font-family: Arial, Helvetica, sans-serif;">Ding, ding <br>
+    That's the crazy frog <br>
+    Ding, Ding <br>
+    Beem, beem <br>
+    Ring, ding, ding, ding, ding, ring. Dem, dem, dem</p>
+
+  <p id="tres">Ring, ding, ding, ding, ding ring. Oh, oh <br>
+    Ring, ding, ding, ding, ding, ring. Dem, dem, dem <br>
+    Ring, ding, ding, ding, ding <br>
+    That's the crazy frog <br>
+    Break down!</p>
 </body>
 </html>
