--- a/aula 7/index.html
+++ b/aula 7/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <div class="header">
-        <div class="rust eze">
+        <div class="logo">
             <span class="iconlogo material-symbols-outlined">
                 bolt
-                </span>logo
+                </span>rust-eze
         </div>
         <ul class="menu">
             <li>home</li>
