--- a/pasta de aulas/aula 10/index.html
+++ b/pasta de aulas/aula 10/index.html
@@ -6,7 +6,7 @@
     <title>ll</title>
 </head>
 <body>
-    <p style="height: ;  align-items: center;"></p>
+    <p style=" align-items: center;"></p>
 </body>
 <script src="kaksksak.js"></script>
 </html>
