--- a/exercicio senai/pagina1/index.html
+++ b/exercicio senai/pagina1/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Senai</title>
+    <title>Home</title>
 </head>
 <body>
-    
+    <header>
+        <div id="cabeça">
+            
+        </div>
+    </header>
 </body>
 </html>
