--- a/exercicio senai/pagina1/index.html
+++ b/exercicio senai/pagina1/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Senai</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/exercicio senai/style_header.css">
+    <link rel="stylesheet" href="style_index.css">
 </head>
 <body>
     <div class="header">
@@ -22,24 +23,24 @@
     </div>
     <div class="body">
 
-        <div>
+        <div id="organizador">
 
-            <div>
-                <img src="https://admin.loja.senaies.com.br/pub/media/catalog/product//m/e/mecanica_automotiva_b_sica_1_2.jpg" alt="mecanic">
+            <div class="escolha">
+                <img class="img_senai" src="https://admin.loja.senaies.com.br/pub/media/catalog/product//m/e/mecanica_automotiva_b_sica_1_2.jpg" alt="mecanic">
                 <div>
                     
                 </div>
             </div>
 
-            <div>
-                <img src="https://admin.loja.senaies.com.br/pub/media/catalog/product//p/i/pintura_industrial_6.jpg" alt="pintura">
+            <div class="escolha">
+                <img class="img_senai" src="https://admin.loja.senaies.com.br/pub/media/catalog/product//p/i/pintura_industrial_6.jpg" alt="pintura">
                 <div>
 
                 </div>
             </div>
 
-            <div>
-                <img src="https://admin.loja.senaies.com.br/pub/media/catalog/product//w/h/whatsapp_image_2021-01-28_at_17.08.00_3.jpeg" alt="custura">
+            <div class="escolha">
+                <img class="img_senai" src="https://admin.loja.senaies.com.br/pub/media/catalog/product//w/h/whatsapp_image_2021-01-28_at_17.08.00_3.jpeg" alt="custura">
                 <div>
 
                 </div>
