ficou mais ou menos, mas é melhor que nada

--- a/exercicio senai/cursos/mecanica.html
+++ b/exercicio senai/cursos/mecanica.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="texto_geral.css">
     <link rel="stylesheet" href="/exercicio senai/style_header.css">
 </head>
 <body>
@@ -16,16 +17,48 @@
         </ul>
         <div class="esquerda">
             <ul class="letra">
-                <li>historia</li>
+                <a href="/exercicio senai/historia.html/historia.html">
+                    <li>historia</li>
+                </a>
             </ul>
             <ul class="letra">
+                <a href="/exercicio senai/pagina2/paginadelogin.html" style="text-decoration: none;">
                     <li>login</li>
+                </a>
             </ul>
         </div>
     </div>
 
-    <div id="corpo">
-
+    <div class="corpo" style="height: 30vw;">
+        <div class="texto">
+            <h2>MECÂNICA AUTOMOTIVA BÁSICA</h2>
+            <h1>
+                Objetivo
+            </h1>
+            <br>
+            <p>Prepara o aluno para realizar manutenção mecânica básica em automóveis de acordo com normas e procedimentos técnicas de qualidade, segurança, higiene e saúde.</p>
+            <br>
+            <h1>
+                Pré-Requisitos
+            </h1>
+            <br>
+            <p>Ter idade mínima de 16 anos </p>
+            <p> Ensino fundamental I completo.</p>
+            <br>
+            <b>ESTE CURSO É 100% PRESENCIAL, PORTANTO, TRATA-SE DE OFERTA APENAS PARA RESIDENTES DO ESTADO DO ESPÍRITO SANTO. OBSERVE O ENDEREÇO DA FILIAL DA TURMA ESCOLHIDA.</b>
+            <br>
+            <b>DOCUMENTOS PARA MATRÍCULA</b>
+            <br>
+            <p>Documento de identidade;</p>
+            <p>xComprovante de residência atualizado;</p>
+            <p>xComprovante de escolaridade ou autodeclaração de compatibilidade;</p>
+            <p>CPF.</p>
+            <h1>
+                Conteúdo
+            </h1>
+            <br>
+            <p>Mecânica Automotiva Básica - 60h</p>
+        </div>
     </div>
 
     <div class="footer">
