--- a/exercicio senai/cursos/pintura.html
+++ b/exercicio senai/cursos/pintura.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="texto_geral.css">
     <link rel="stylesheet" href="/exercicio senai/style_header.css">
 </head>
 <body>
@@ -16,16 +17,53 @@
         </ul>
         <div class="esquerda">
             <ul class="letra">
-                <li>historia</li>
+                <a href="/exercicio senai/historia.html/historia.html">
+                    <li>historia</li>
+                </a>
             </ul>
             <ul class="letra">
+                <a href="/exercicio senai/pagina2/paginadelogin.html" style="text-decoration: none;">
                     <li>login</li>
+                </a>
             </ul>
         </div>
     </div>
 
-    <div id="corpo">
-
+    <div class="corpo">
+        
+        <div class="texto">
+            <h2>PINTURA INDUSTRIAL</h2>
+            <h1>
+                Objetivo
+            </h1>
+            <br>
+            <p>No curso de Qualificação Profissional de Pintura Industrial você será capaz de realizar as operações de pintura de superfície metálica tratada, utilizando pistola convencional e airless spray, de acordo com normas e procedimentos técnicos, de qualidade, saúde, segurança e meio ambiente.. Suas principais atividades serão: preparar e selecionar equipamento e tinta, avaliar superfície tratada, pintar superfícies com pistola convencional, pintar superfícies com pistola airless spray, limpar materiais e equipamentos utilizados e a área de trabalho. Proporcionar o desenvolvimento das capacidades técnicas, sociais, metodológicas e organizativas referentes à qualificação profissional em Pintura Industrial.</p>
+            <br>
+            <h1>
+                Pré-Requisitos
+            </h1>
+            <br>
+            <p>Idade superior a 16 anos;</p>
+            <br>
+            <p> Ensino Fundamental I  completo.</p>
+            <br><br>
+            <b>ESTE CURSO É 100% PRESENCIAL, PORTANTO, TRATA-SE DE OFERTA APENAS PARA RESIDENTES DO ESTADO DO ESPÍRITO SANTO. OBSERVE O ENDEREÇO DA UNIDADE DA TURMA ESCOLHIDA.</b>
+            <br><br>
+            <b>DOCUMENTOS PARA MATRÍCULA</b>
+            <br><br>
+            <p>Documento de identidade;</p>
+            <p>Comprovante de residência atualizado;</p>
+            <p>Comprovante de escolaridade ou autodeclaração de compatibilidade;</p>
+            <p>CPF.</p>
+            <br>
+            <h1>
+                Conteúdo
+            </h1>
+            <br>
+            <p>Preparação de Superfície para Pintura</p>
+            <p>Pintura de Superfície</p>
+            <p>Controle de Qualidade</p>
+        </div>
     </div>
 
     <div class="footer">
