--- a/exercicio senai/historia.html/historia.html
+++ b/exercicio senai/historia.html/historia.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="style_historia.css">
     <link rel="stylesheet" href="/exercicio senai/style_header.css">
 </head>
 <body>
@@ -19,12 +20,49 @@
                 <li>historia</li>
             </ul>
             <ul class="letra">
+                <a href="/exercicio senai/pagina2/paginadelogin.html" style="text-decoration: none;">
                     <li>login</li>
+                </a>
             </ul>
         </div>
     </div>
-
-    <div id="corpo">
+    
+    <div class="corpo">
+        
+        <div id="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/DHqAVNY0y1E?si=yatQgHbz4UySxaKO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div id="texto">
+            <p>O Senai surgia no Espírito Santo em 25 de março de 1952. A primeira escola funcionou em um galpão cedido pela CVRD (hoje Vale). A Escola de Aprendizagem Pedro Nolasco funcionava em Cariacica com cursos de marcenaria e mecânica. Depois, o Senai incorporou a Escola Ferroviária João Neiva. Nessa época, a indústria capixaba estava voltada para o modal ferroviário e necessitava, principalmente, de mão de obra para a manutenção da Estrada de Ferro Vitória a Minas. Em 1955, o Senai ES se transformou em Delegacia Regional, subordinado ao Departamento Regional. </p>
+            <br>
+            <p>Em 25 de maio de 1964, em Vitória, foi inaugurado o centro de formação profissional Jerônimo Monteiro, com equipamentos modernos e grande disputa de vagas. Já em 1970 esta área construída foi ampliada de 5.163 para 11.786 metros quadrados.  </p>
+            <br>
+            <p>Também a partir de 1970, foram construídos os centros de formação profissional de Cachoeiro de Itapemirim e de Linhares. Já em 1971, foi inaugurado o edifício sede da administração central do Departamento Regional do Senai ES.  </p>
+            <br>
+            <p>Em seguida, em 1986, foram criados os centros na área de Serra, em Colatina e Vila Velha. Já em 1987, inaugurou-se o centro técnico de instrumentação industrial Ariovaldo Fontes, em Vitória, com 956 candidatos concorrendo a 32 vagas para técnicos de instrumentação.  </p>
+            <br>
+            <p>A partir da década de 80, e com a consolidação de parcerias com grandes empresas e o poder público, o Senai expande sua atuação para além da indústria extrativa e começa a oferecer soluções em diversos setores da indústria capixaba. </p>
+            <br>
+            <p>Além das escolas na Grande Vitória e interior, para aumentar a capilaridade e promover o acesso às soluções e tecnologias oferecidas pelo Senai, a instituição investe em unidades móveis com equipamentos de ponta e preparadas para atender a diversos setores industriais, como a unidade móvel frigorífica e a escola móvel de mecânica veicular. </p>
+            <br>
+            <p>A atuação do Senai alcança todo o estado, especialmente em função de suas ações móveis, e 18 (dezoito) áreas industriais: Alimentos e Bebidas, Automotiva, Automação, Construção Civil, Couro e Calçado, Gestão, Gráfica, Metalmecânica, Eletroeletrônica, Refrigeração e Climatização, Tecnologia da Informação, Madeira e Mobiliário, Meio Ambiente, Minerais não-metálicos, Petróleo e Gás, Polímeros, Segurança no Trabalho e Têxtil e Vestuário. </p>
+            <br>
+            <p>Ao longo de sua trajetória no Espírito Santo, o Senai matriculou mais de 1,5 mi de alunos em seus cursos/programas de Iniciação Profissional, Qualificação Profissional, Habilitação Técnica, Aperfeiçoamento Profissional e no Programa de Aprendizagem Industrial. </p>
+            <br>
+            <p>A partir de 2010, o Senai começa a oferecer consultorias em eficiência energética para as empresas e, em 2017 cria a diretoria de Inovação, Tecnologia e Produtividade, que oferece serviços nestas áreas para as empresas capixabas. </p>
+            <br>
+            <p>Em 2019, foi inaugurado o hub de inovação – Findeslab, uma iniciativa conjunta do Senai e da Findes. Já em 2020, foi inaugurado o novo espaço do Instituto Senai de Tecnologia, no Senai Vitória.</p>
+            <br>
+            <p>Também em 2020, os cursos técnicos do Senai passaram a contar com um novo formato: EaD com prática. Na habilitação técnica, os cursos têm 80% da carga on-line e 20% presencial. </p>
+            <br>
+            <p>Em 2020, o Senai ganhou uma Academia de Segurança Cibernético. Os equipamentos e sistemas disponibilizados nas unidades do Senai formam um ambiente seguro para realização de competições cibernéticas, palestras, consultorias e cursos. </p>
+            <br>
+            <p>Para 2021, o Senai ES fechou uma parceria com o Governo do Estado para oferecer cursos técnicos gratuitos à alunos da rede pública estadual. O programa de qualificação profissional faz parte do Plano Espírito Santo – Convivência Consciente, que prevê a criação de 100 mil empregos nos próximos anos. </p>
+            <br>
+            <p>A missão do Senai, desde a criação, é o de qualificar pessoas, tornando-as profissionais capacitados para trabalhar no setor industrial. E com mais de meio século de existência, o Senai ES mantém seu foco principal de atuação em educação profissional, para atender às demandas do setor, prestando também consultoria, serviços técnicos especializados e inovação tecnológica.  </p>
+            <br>
+            <p>A partir de então, o Senai mostra resultados que demonstram o equilíbrio entre o bom desempenho e o estabelecimento das metas, atentando para a demanda sempre crescente. Além de oferecer programas de grande visibilidade e importância para a indústria capixaba. </p>
+        </div>
 
     </div>
 
