--- a/exercicio senai/pagina1/index.html
+++ b/exercicio senai/pagina1/index.html
@@ -16,10 +16,14 @@
         </ul>
         <div class="esquerda">
             <ul class="letra">
-                <li>historia</li>
+                    <a href="/exercicio senai/historia.html/historia.html">
+                        <li>historia</li>
+                    </a>
             </ul>
             <ul class="letra">
-                    <li>login</li>
+                    <a href="/exercicio senai/pagina2/paginadelogin.html" style="text-decoration: none;">
+                        <li>login</li>
+                    </a>
             </ul>
         </div>
     </div>
