--- a/exercicio senai/pagina2/paginadelogin.html
+++ b/exercicio senai/pagina2/paginadelogin.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     
     <link rel="stylesheet" href="style_login.css">
     <link rel="stylesheet" href="/exercicio senai/style_header.css">
-
-
 </head>
 <body>
     <div class="header">
@@ -19,10 +17,14 @@
         </ul>
         <div class="esquerda">
             <ul class="letra">
-                <li>historia</li>
+                <a href="/exercicio senai/historia.html/historia.html">
+                    <li>historia</li>
+                </a>
             </ul>
             <ul class="letra">
+                <a href="/exercicio senai/pagina2/paginadelogin.html">
                     <li>login</li>
+                </a>
             </ul>
         </div>
     </div>
@@ -30,11 +32,15 @@
     <div class="corpo">
 
         <form class="bloco">
-            <input type="text">
+            <h1>Crie seu login</h1>
             <br>
-            <input type="password">
+            <p>Email</p>
+            <input size="50" type="text">
             <br>
-            <button value="reset">Comfirma</button>
+            <p>Senha</p>
+            <input size="50" type="password">
+            <br>
+            <button  value="reset">Comfirma</button>
         </form>
         
     </div>
